--- a/_css/main.css
+++ b/_css/main.css
@@ -17,7 +17,7 @@
 }
 
 #mainCon .mainVisual .swiper-slide:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -29,15 +29,15 @@
 }
 
 #mainCon .mainVisual .visual01 {
-  background-image: url('../_img/main_visual03.png');
+  background-image: url("../_img/main_visual03.png");
 }
 
 #mainCon .mainVisual .visual02 {
-  background-image: url('../_img/main_visual02.png');
+  background-image: url("../_img/main_visual02.png");
 }
 
 #mainCon .mainVisual .visual03 {
-  background-image: url('../_img/main_visual01.png');
+  background-image: url("../_img/main_visual01.png");
 }
 
 #mainCon .mainVisual .swiper-slide .visualTit {
@@ -83,6 +83,18 @@
 
 #mainCon .mainVisual .visualPagination .swiper-button-next {
   right: 0 !important;
+}
+
+#mainCon .mainVisual .swiper-button-prev,
+#mainCon .mainVisual .swiper-container-rtl .swiper-button-next {
+  background-image: url(../_img/mainvisual_prev_arrow.svg) !important;
+  opacity: 0.8;
+}
+
+#mainCon .mainVisual .swiper-button-next,
+#mainCon .mainVisual .swiper-container-rtl .swiper-button-prev {
+  background-image: url(../_img/mainvisual_next_arrow.svg) !important;
+  opacity: 0.8;
 }
 
 #mainCon .mainVisual .visualPagination .swiper-button-prev:after,
@@ -137,7 +149,7 @@
 }
 
 #ourWork .workIcon h5:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0.8em;
   left: -6.6em;
@@ -153,7 +165,7 @@
   right: 0;
 }
 
-#ourWork .workIcon .workDetail>div {
+#ourWork .workIcon .workDetail > div {
   float: left;
   margin-left: 1.3em;
 }
@@ -180,7 +192,7 @@
 
 #ourWork .workIcon .workDetail div a:hover .iconArea,
 #ourWork .workIcon .workDetail div a:focus .iconArea {
-  border-color: #0014A7;
+  border-color: #0014a7;
 }
 
 #ourWork .workIcon .workDetail div a .iconArea svg {
@@ -194,7 +206,7 @@
 
 #ourWork .workIcon .workDetail div a:hover .iconArea svg,
 #ourWork .workIcon .workDetail div a:focus .iconArea svg {
-  fill: #0014A7 !important;
+  fill: #0014a7 !important;
 }
 
 #ourWork .workIcon .workDetail div a p {
@@ -205,7 +217,7 @@
 }
 
 #ourWork .workIcon .workDetail div a:hover p {
-  color: #0014A7;
+  color: #0014a7;
 }
 
 /* recommendation */
@@ -274,7 +286,7 @@
   width: 100%;
   padding-bottom: 10em;
   margin-bottom: 0;
-  background: url('../_img/main_counseling_bg.png') no-repeat bottom center;
+  background: url("../_img/main_counseling_bg.png") no-repeat bottom center;
 }
 
 #counseling .titArea {
@@ -325,7 +337,7 @@
 
 #counseling .count .counTotal:after,
 #counseling .count .counCheck:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -338,11 +350,11 @@
 
 #counseling .count .counTotal {
   margin-bottom: 1.3em;
-  background-image: url('../_img/main_counseling01.png');
+  background-image: url("../_img/main_counseling01.png");
 }
 
 #counseling .count .counCheck {
-  background-image: url('../_img/main_counseling02.png');
+  background-image: url("../_img/main_counseling02.png");
 }
 
 #counseling .sellList {
@@ -384,7 +396,7 @@
   display: inline-block;
   width: 90%;
   padding: 0.3em;
-  background-color: #3276D8;
+  background-color: #3276d8;
   border-radius: 3px;
   font-size: 1.4rem;
   font-weight: 500;
@@ -393,7 +405,7 @@
 }
 
 #counseling .sellList .roofSell ul li .sellState span.sellCompletion {
-  background-color: #0014A7;
+  background-color: #0014a7;
 }
 
 #counseling .sellList .roofSell ul li .sellTit {
@@ -420,7 +432,7 @@
   width: calc((100% - 6.5em) / 6);
   padding: 1.3em;
   margin-right: 1.3em;
-  border: 2px solid #4BAEFA;
+  border: 2px solid #4baefa;
   border-radius: 1em;
   box-sizing: border-box;
 }
@@ -430,23 +442,23 @@
 }
 
 #procedure .diagram ul li.diaCounseling {
-  border-color: #0091EA;
+  border-color: #0091ea;
 }
 
 #procedure .diagram ul li.diaDiagnosis {
-  border-color: #0089CE;
+  border-color: #0089ce;
 }
 
 #procedure .diagram ul li.diaContract {
-  border-color: #0062AD;
+  border-color: #0062ad;
 }
 
 #procedure .diagram ul li.diaConsignment {
-  border-color: #00457A;
+  border-color: #00457a;
 }
 
 #procedure .diagram ul li.diaCompletion {
-  border-color: #002F4F;
+  border-color: #002f4f;
 }
 
 #procedure .diagram ul li figure {
@@ -483,7 +495,7 @@
 }
 
 #guide:after {
-  content: '365 SELL CAR';
+  content: "365 SELL CAR";
   position: absolute;
   bottom: -0.4em;
   right: 0;
@@ -519,7 +531,7 @@
   left: 0;
   width: 20%;
   height: 30em;
-  background-image: url('../_img/main_guide01.png');
+  background-image: url("../_img/main_guide01.png");
 }
 
 #guide .guideDetail ul .guiPurchase {
@@ -527,7 +539,7 @@
   left: calc(20% + 1.3em);
   width: 40%;
   height: 14em;
-  background-image: url('../_img/main_guide02.png');
+  background-image: url("../_img/main_guide02.png");
 }
 
 #guide .guideDetail ul .guiAssurance {
@@ -535,7 +547,7 @@
   left: calc(20% + 1.3em);
   width: 25%;
   height: 16.6em;
-  background-image: url('../_img/main_guide03.png');
+  background-image: url("../_img/main_guide03.png");
 }
 
 #guide .guideDetail ul .guiFaq {
@@ -543,7 +555,7 @@
   left: calc(45% + 2.6em);
   width: 30%;
   height: 13.3em;
-  background-image: url('../_img/main_guide04.png');
+  background-image: url("../_img/main_guide04.png");
 }
 
 #guide .guideDetail ul li a {
@@ -556,7 +568,7 @@
 }
 
 #guide .guideDetail ul li a:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -589,7 +601,7 @@
 }
 
 #guide .guideDetail ul li a h5:after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -0.8em;
   left: 0;
